--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                             <div class="portfolio-grid row">
                                 <!-- Single item-->
                                 <div class="single-item col-6 col-lg-4 design">
-                                    <a class="portfolio-item" href="https://arshadrahmanv.tk/" data-lightbox>
+                                    <a class="portfolio-item" href="https://arshadrahiman.github.io/my-portfolio/" data-lightbox>
                                         <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/project.jpg">
                                             <div class="item-content">
                                                 <h6 class="content-title">blazing fast personal site</h6><span class="content-more">More Info</span>
@@ -579,7 +579,7 @@
                                 </div>
                                 <!-- Single item-->
                                 <div class="single-item col-6 col-lg-4 design">
-                                    <a class="portfolio-item" href="img/item-6.jpg" data-lightbox>
+                                    <a class="portfolio-item" href=https://arshadrahmanv.tk/ "" data-lightbox>
                                         <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/project.jpg">
                                             <div class="item-content">
                                                 <h6 class="content-title">Personal website and Blog</h6><span class="content-more">More
