--- a/index.html
+++ b/index.html
@@ -1,40 +1,40 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="zxx">
 
 <head>
     <!-- Required meta tags-->
-    <meta charset="utf-8">
-    <!-- Title-->
-    <title>Abdullah Arshadul Rahman - Personal Portfolio</title>
-    <!-- Description-->
-    <meta name="description" content="Personal Portfolio Template">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Favicons-->
-    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicons/favicon.ico">
-    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicons/favicon.ico">
-    <!-- Web fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i&amp;display=swap" rel="stylesheet">
-    <!-- CSS vendors-->
-    <link rel="stylesheet" href="css/bootstrap-custom.css">
-    <link rel="stylesheet" href="css/ionicons.min.css">
-    <link rel="stylesheet" href="css/tiny-slider.css">
-    <link rel="stylesheet" href="css/lity.min.css">
-    <link rel="stylesheet" href="css/simplebar.min.css">
-    <link rel="stylesheet" href="css/jquery.mb.YTPlayer.min.css">
-    <!-- Main CSS-->
-    <link rel="stylesheet" href="css/main.css">
-    <!-- CSS Color scheme-->
-    <link id="color-scheme" rel="stylesheet" href="css/colors/main-darkgreen.css">
-    <!-- Custom CSS (Add your custom CSS styles to this file)-->
-    <!-- link fontawsome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-    <!-- linked font awoesome -->
-    <link rel="stylesheet" href="css/custom.css">
-    <!-- removeIf(customizerDist)-->
-    <link rel="stylesheet" href="../customizer/main.css">
-    <!-- endremoveIf(customizerDist)-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<meta charset="utf-8">
+<!-- Title-->
+<title>Abdullah Arshadul Rahman - Personal Portfolio</title>
+<!-- Description-->
+<meta name="description" content="Personal Portfolio Template">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!-- Favicons-->
+<link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="./img/favicons/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="./img/favicons/favicon.ico">
+<!-- Web fonts-->
+<link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i&amp;display=swap" rel="stylesheet">
+<!-- CSS vendors-->
+<link rel="stylesheet" href="css/bootstrap-custom.css">
+<link rel="stylesheet" href="css/ionicons.min.css">
+<link rel="stylesheet" href="css/tiny-slider.css">
+<link rel="stylesheet" href="css/lity.min.css">
+<link rel="stylesheet" href="css/simplebar.min.css">
+<link rel="stylesheet" href="css/jquery.mb.YTPlayer.min.css">
+<!-- Main CSS-->
+<link rel="stylesheet" href="css/main.css">
+<!-- CSS Color scheme-->
+<link id="color-scheme" rel="stylesheet" href="css/colors/main-darkgreen.css">
+<!-- Custom CSS (Add your custom CSS styles to this file)-->
+<!-- link fontawsome -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+<!-- linked font awoesome -->
+<link rel="stylesheet" href="css/custom.css">
+<!-- removeIf(customizerDist)-->
+<link rel="stylesheet" href="../customizer/main.css">
+<!-- endremoveIf(customizerDist)-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body class="theme-dark">
@@ -876,4 +876,4 @@
 </body>
 
 
-</html>
+</html> -->
